# Programacao

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Modelo/Teste_2/: Airport.cpp  Airport.h  CMakeLists.txt  Floatable.h  Hanoi.cpp  Hanoi.h  Resume.md  Submarine.h  print_grades.cpp  show_file.h  word_count.cpp
Modelo/Teste__1/: expand.cpp
Modelo_Teste1/: CMakeLists.txt  common-letters.cpp  expand.cpp  interval.h  largest.cpp  print_array.h  rotate-left.cpp  time-add.cpp
P01/: char-types.cpp  pi.cpp  primes.cpp
P02/: adigits.cpp  bell.cpp  equation.cpp
P03/: interval.cpp  interval.h  time_of_day.cpp
P04/: interval.h  intervals.cpp  merge-arrays.cpp  merge-dynamic-arrays.cpp  print_array.h
P05/: CMakeLists.txt
PlayGrounds/Py01/: CMakeLists.txt  arithmetic.cpp  calculator.cpp  hello.cpp  md.cpp  reverse.cpp
PlayGrounds/Py02/: CMakeLists.txt  pell.cpp
PlayGrounds/Py03/: CMakeLists.txt  amount.h  angle.cpp  cross.cpp  vect3d.h
PlayGrounds/Py04/: CMakeLists.txt  prefix.cpp  reverse.cpp  rle-encoding.cpp  scrabble.cpp  ssum.cpp  trim.cpp
Pratical Exercices P/P00/: hello.cpp
Pratical Exercices P/P01/: fizz-buzz.cpp  pernicious.cpp
Pratical Exercices P/P02/: CMakeLists.txt  advance.cpp  bc.cpp
Pratical Exercices P/P03/: CMakeLists.txt  complex.cpp
Pratical Exercices P/P05/: cdata.h  expand_cdata.cpp
Pratical Exercices P/P06/: CMakeLists.txt
Pratical_Exercices_P/P00/: CMakeLists.txt
Pratical_Exercices_P/P01/: CMakeLists.txt
Pratical_Exercices_P/P03/: complex.h  fraction.cpp  fraction.h  mandelbrot.cpp  time_of_day.h
Pratical_Exercices_P/P04/: CMakeLists.txt  hstr-to-integer.cpp  max.cpp
Pratical_Exercices_P/P05/: CMakeLists.txt  alist.h  alist_append.cpp  duplicate.cpp  expand_cdata.cpp  longest_string.cpp  median.cpp
Pratical_Exercices_P/P06/: CMakeLists.txt  longest-common-prefix.cpp  normalise-vector.cpp  pangram.cpp  sparse-matrix-add.cpp  string-split.cpp
Pratical_Exercices_P/P08/: CMakeLists.txt  date1.cpp  date2.cpp  date3.cpp  fraction.cpp  fraction_aux.h  point2d.cpp
Pratical_Exercices_P/P09/: CMakeLists.txt
Projeto/: CMakeLists.txt  README.md  test_log.txt
Projeto/include/: Image.hpp
Projeto/main/: Tester.cpp
Projeto/src/: Image.cpp  ScrimParser.cpp
Py01/: einstein.cpp  encryption.cpp
Py02/: area.cpp  nm.cpp  sundays.cpp  swapper.cpp  triangles.cpp
Py03/: change.cpp  complex.h  eval-complex.cpp  eval-fraction.cpp  fraction.h  interval.h  smallest.cpp
Py04/: nrl.cpp
include/: Color.hpp  Command.hpp  Image.hpp  Scrim.hpp
include/Command/: Add.hpp  Chain.hpp  Crop.hpp  Fill.hpp  Grayscale.hpp  HMirror.hpp  Invert.hpp  Move.hpp  Replace.hpp  Resize.hpp  Rotate.hpp  Scale_up.hpp  Slide.hpp  VMirror.hpp
main/: Tester.cpp
resources/slides/: 10Notas - inheritance.txt  8Notas - classes.txt  (+3 more)
scrims/: chain1.scrim  chain2.scrim  chain3.scrim  chain4.scrim
src/: Color.cpp  Image.cpp  Scrim.cpp  ScrimParser.cpp
(+46 files in other folders)
